--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@ footer {
     text-align: center;
     width: 93%;
     padding: 2px 1px 2px 1px;
-    margin: 10px 2% 0 10px;
+    margin: 10px;
     background: #78284a; /* Old browsers */
 	background: -moz-linear-gradient(left, #78284a 0%, #6d8a9f 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#78284a), color-stop(100%,#6d8a9f)); /* Chrome,Safari4+ */
