responsive mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,20 @@ body {
     font-size: 13px;
     line-height: 1.5em;
     color: #fff;
-    background: #78284a; /* Old browsers */
-	background: -moz-linear-gradient(left, #78284a 0%, #6d8a9f 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#78284a), color-stop(100%,#6d8a9f)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(left, #78284a 0%,#6d8a9f 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(left, #78284a 0%,#6d8a9f 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(left, #78284a 0%,#6d8a9f 100%); /* IE10+ */
-	background: linear-gradient(to right, #78284a 0%,#6d8a9f 100%); /* W3C */
+    background: #78284a;
+    /* Old browsers */
+    background: -moz-linear-gradient(left, #78284a 0%, #6d8a9f 100%);
+    /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%, #78284a), color-stop(100%, #6d8a9f));
+    /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left, #78284a 0%, #6d8a9f 100%);
+    /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left, #78284a 0%, #6d8a9f 100%);
+    /* Opera 11.10+ */
+    background: -ms-linear-gradient(left, #78284a 0%, #6d8a9f 100%);
+    /* IE10+ */
+    background: linear-gradient(to right, #78284a 0%, #6d8a9f 100%);
+    /* W3C */
 }
 
 .clearfix {
@@ -198,13 +205,20 @@ footer {
     width: 93%;
     padding: 2px 1px 2px 1px;
     margin: 10px;
-    background: #78284a; /* Old browsers */
-	background: -moz-linear-gradient(left, #78284a 0%, #6d8a9f 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#78284a), color-stop(100%,#6d8a9f)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(left, #78284a 0%,#6d8a9f 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(left, #78284a 0%,#6d8a9f 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(left, #78284a 0%,#6d8a9f 100%); /* IE10+ */
-	background: linear-gradient(to right, #78284a 0%,#6d8a9f 100%); /* W3C */
+    background: #78284a;
+    /* Old browsers */
+    background: -moz-linear-gradient(left, #78284a 0%, #6d8a9f 100%);
+    /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%, #78284a), color-stop(100%, #6d8a9f));
+    /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left, #78284a 0%, #6d8a9f 100%);
+    /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left, #78284a 0%, #6d8a9f 100%);
+    /* Opera 11.10+ */
+    background: -ms-linear-gradient(left, #78284a 0%, #6d8a9f 100%);
+    /* IE10+ */
+    background: linear-gradient(to right, #78284a 0%, #6d8a9f 100%);
+    /* W3C */
     color: #fff;
     border: 1px solid #fff;
     border-radius: 5px;
@@ -216,25 +230,12 @@ footer:hover {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@media only screen and (max-width: 600px) {
+    #container {
+        width: 90%;
+        height: 90%;
+        background: #333;
+        margin: 50px auto 0 auto;
+        border-radius: 8px;
+    }
+}
